--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Domnio Script Builder</title>
   </head>
 
   <body>
     <noscript>
-      <strong>We're sorry but blockly-vue doesn't work properly without JavaScript enabled. Please enable it to
+      <strong>We're sorry but Domnio Script Builder doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
     </noscript>
     <div id="app"></div>
