--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
   <body>
     <noscript>
       <strong>We're sorry but Domnio Script Builder doesn't work properly without JavaScript enabled. Please enable it to
-        continue.</strong>
+        continue.</strong> <br> <br>
+      <strong>Ci dispiace, ma il servizio Domnio Script Builder non può funzionare senza javascript abilitato.
+      </strong> <br> <br> <br>
+
+      <p>Problems? Join our Discord server or contact us via email</p>
+      <br>
+      <p>Email: domnio@aiaiai</p> <br>
+      <a href="https://dsc.gg/domnio" target="_blank"><button>Join our discord server</button></a>
     </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 
   </html>
+
+  <!--
+    Oh, ma ciao!
+
+    Utilizza il codice "" per ottenere 20 Domnio coins!
+
+    NON DIRLO A NESSUNO!  
+  -->
