--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <noscript>
-      <strong>We're sorry but Domnio Script Builder doesn't work properly without JavaScript enabled. Please enable it to
+      <strong> We're sorry but Domnio Script Builder doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong> <br> <br>
       <strong>Ci dispiace, ma il servizio Domnio Script Builder non può funzionare senza javascript abilitato.
       </strong> <br> <br> <br>
@@ -35,3 +35,23 @@
 
     NON DIRLO A NESSUNO!  
   -->
+
+  <style>
+@font-face {
+  font-family: "Nunito";
+  src: url(./fonts/Nunito.ttf);
+}
+
+@font-face {
+  font-family: "Ubuntu";
+  src: url(./fonts/Ubuntu.ttf);
+}
+
+strong {
+  font-family: "Nunito", "Ubuntu", sans-serif;
+}
+
+p {
+  font-family: "Nunito", "Ubuntu", sans-serif;
+}
+  </style>
