added meta tag logo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Create your NodeJS script with a block-based online IDE!">
+    <meta name="description" content="Create your NodeJS script with an online block-based online IDE!">
     <meta name="keywords" content="Domnio, Script Builder, Script, NodeJS scratch, scratch, nodejs, blocks, JavaScript">
+    <meta property="og:image" content=”./src/assets/logo.png” />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
