better meta tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 
   <head>
     <meta charset="UTF-8" />
+    <title>Script Builder | Domnio</title>
     <meta name="description" content="Create your NodeJS script with an online block-based online IDE!">
     <meta name="keywords" content="Domnio, Script Builder, Script, NodeJS scratch, scratch, nodejs, blocks, JavaScript">
-    <meta property="og:image" content=”./src/assets/logo.png” />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://scriptbuild.domnio.tk/">
+    <meta property="og:title" content="Domnio Script Builder">
+    <meta property="og:description" content="Create your NodeJS script with an online block-based online IDE!">
+    <meta property="og:image" content="”./src/assets/logo.png”">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="./src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Script Builder | Domnio</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://scriptbuild.domnio.tk/">
+    <meta property="twitter:title" content="Domnio Script Builder">
+    <meta property="twitter:description" content="Create your NodeJS script with an online block-based online IDE!">
+    <meta property="twitter:image" content="”./src/assets/logo.png”">
   </head>
 
   <body>
